--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <p>My specialization is Eletronics and Communication Engineering (ECE).</p>
   <p>Very interested in developing web pages.</p>
 
-  <p><b>Annotation</b>:<u>Page under Developing!</u></p>
+  <p><b>Annotation</b>:<u>Page under Development!</u></p>
   <h2>Credentials and Portfolio</h2>
   <p><a href="resume.html">My Resume </a><b>|</b><a href="https://github.com/baxwa"> My Github</a></p>
   <h2>Contact</h2>
