--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut" href="favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width = device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="name" content="Sai Baswaraj's portal">
-  /*<meta name="robots" content="noindex, nofollow">*/
+  <meta name="robots" content="noindex, nofollow">
 </header>
 <body>
   <img src="images/banner.jpg" width="50%" alt="banner">
