--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <meta name="robots" content="noindex, nofollow">
 </header>
 <body>
+  <a href="https://dev.to/saibaswaraj">
+  <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="Sai Baswaraj's DEV Profile" height="30" width="30">
+  </a>
   <img src="images/banner.jpg" width="50%" alt="banner">
   <h1>Sai Baswaraj</h1>
 
