--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
   <meta name="robots" content="noindex, nofollow">
 </header>
 <body>
-  <a href="https://dev.to/saibaswaraj">
-  <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="Sai Baswaraj's DEV Profile" height="30" width="30">
-  </a>
   <img src="images/banner.jpg" width="50%" alt="banner">
   <h1>Sai Baswaraj</h1>
 
@@ -25,7 +22,7 @@
 
   <p><b>Annotation</b>:<u>Page under Development!</u></p>
   <h2>Credentials and Portfolio</h2>
-  <p><a href="resume.html">My Resume </a><b>|</b><a href="https://github.com/saibaswaraj"> My Github</a></p>
+  <p><a href="resume.html">My Resume </a><b>|</b><a href="https://github.com/saibaswaraj"> My github</a></p>
   <h2>Contact</h2>
 
   <p>Email : <a href="mailto:saibaswaraj61@gmail.com">saibaswaraj61@gmail.com</a></p>
