--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 
   <p><b>Annotation</b>:<u>Page under Development!</u></p>
   <h2>Credentials and Portfolio</h2>
-  <p><a href="resume.html">My Resume </a><b>|</b><a href="https://github.com/saibaswaraj"> My github</a></p>
+  <p><a href="resume.html">
+  <img src="images/resume.png" alt="Sai Baswaraj's resume" height="20" width="20"> My Resume </a>
+  <b>|</b>
+    <a href="https://github.com/saibaswaraj">
+    <img src="images/github.png" alt="Sai Baswaraj's Github Profile" height="20" width="20"> My GitHub
+  </a></p>
   <h2>Contact</h2>
 
   <p>Email : <a href="mailto:saibaswaraj61@gmail.com">saibaswaraj61@gmail.com</a></p>
