--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </header>
 <body>
   <img src="images/banner.jpg" width="50%" alt="banner">
-  <h1>Sai Baswaraj</h1>
+  <h6>HELLO EVERYBODY, I AM</h6>
+  <h1>SAI BASWARAJ</h1>
 
   <h2>About Me</h2>
 
